<resources>
    <string name="app_name">UV5R Mini CPS</string>
    <string name="title_channels">Channel List</string>
    <string name="title_radio_settings">Radio Settings</string>
    <string name="action_radio_settings">Radio Settings</string>
    <string name="action_vfo_mode">VFO Mode</string>
    <string name="action_dtmf_settings">DTMF Settings</string>
    <string name="hint_mac">Device MAC</string>
    <string name="label_connected_device">Selected Device</string>
    <string name="text_device_not_selected">No device selected (Scan First)</string>
    <string name="btn_scan_devices">Scan Devices</string>
    <string name="btn_read_real">Read Device</string>
    <string name="hint_delete_channel">Delete Channel NO. (1-999)</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_write_real">Write Back to Device</string>
    <string name="text_not_read">Haven\'t Read Device yet</string>
    <string name="channel_table_empty">No channel data available. Please read device first.</string>
    <string name="settings_empty">No settings data available. Please read device first.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_rescan">Rescan</string>
    <string name="action_go_to_settings">Go to Settings</string>
    <string name="err_missing_ble_permission">Missing Bluetooth permission: %1$s</string>
    <string name="msg_ble_permission_granted">Bluetooth permission granted</string>
    <string name="msg_channel_added">Channel added</string>
    <string name="summary_not_read">Haven\'t Read Device yet</string>
    <string name="summary_enter_mac_first">Please scan and select a device first</string>
    <string name="summary_reading">Reading device...</string>
    <string name="summary_reading_progress">Reading: %1$d/%2$d</string>
    <string name="summary_read_done">Read completed: %1$s</string>
    <string name="summary_read_failed">Read failed: %1$s</string>
    <string name="summary_no_channel_to_add">No available channel number to add</string>
    <string name="summary_channel_range">Channel range 1-999</string>
    <string name="summary_read_first">Please read the device first</string>
    <string name="summary_writing_progress">Writing: %1$d/%2$d</string>
    <string name="summary_write_done">Write back completed</string>
    <string name="summary_write_failed">Write back failed: %1$s</string>
    <string name="summary_pending_done">Pending image generated: %1$s</string>
    <string name="summary_pending_failed">Generation failed: %1$s</string>
    <string name="status_scanning_devices">Scanning devices...</string>
    <string name="status_scanning_count">Scanning devices... %1$d found</string>
    <string name="status_scan_done_count">Scan completed, %1$d device(s) found</string>
    <string name="msg_no_devices_found">No connectable devices found</string>
    <string name="title_select_device">Select Device</string>
    <string name="device_unknown_name">Unknown Device</string>
    <string name="msg_scan_failed">Scan failed: %1$s</string>
    <string name="title_location_required">Location service required</string>
    <string name="msg_location_required_for_scan">System location service is disabled. Please enable it before scanning.</string>
    <string name="col_channel">CH NO.</string>
    <string name="col_rx_freq">Receive Frequency</string>
    <string name="col_rx_tone">Receive Tone</string>
    <string name="col_tx_freq">Transmit Frequency</string>
    <string name="col_tx_tone">Transmit Tone</string>
    <string name="col_power">Power</string>
    <string name="col_bandwidth">Bandwidth</string>
    <string name="col_scan_add">Add to Scan</string>
    <string name="col_dtmf_decode">DTMF Decode</string>
    <string name="col_sq_mode">Squelch Mode</string>
    <string name="col_ptt_id">PTT-ID</string>
    <string name="col_signal">Signaling Code</string>
    <string name="col_busy_lock">Busy Lock</string>
    <string name="col_fhss">FHSS</string>
    <string name="col_channel_name">Channel Name</string>
    <string name="title_edit_rx_freq">CH%1$d Receive Frequency</string>
    <string name="title_edit_rx_tone">CH%1$d Receive Tone</string>
    <string name="title_edit_tx_freq">CH%1$d Transmit Frequency</string>
    <string name="title_edit_tx_tone">CH%1$d Transmit Tone</string>
    <string name="title_edit_power">CH%1$d Power</string>
    <string name="title_edit_bandwidth">CH%1$d Bandwidth</string>
    <string name="title_edit_scan_add">CH%1$d Add to Scan</string>
    <string name="title_edit_dtmf_decode">CH%1$d DTMF Decode</string>
    <string name="title_edit_sq_mode">CH%1$d Squelch Mode</string>
    <string name="title_edit_ptt_id">CH%1$d PTT-ID</string>
    <string name="title_edit_signal">CH%1$d Signaling Code</string>
    <string name="title_edit_busy_lock">CH%1$d Busy Lock</string>
    <string name="title_edit_fhss">CH%1$d Frequency Hopping</string>
    <string name="title_edit_name">CH%1$d Channel Name</string>
    <string name="hint_channel_name">Name</string>
    <string name="err_input_valid_channel">Please enter a valid channel number</string>
    <string name="err_freq_allowed_ranges">Frequency is only allowed in [108,174) / [350,390) / [400,520) MHz</string>
    <string name="vfo_empty">No VFO data available. Please read device first.</string>
    <string name="vfo_a">VFO A</string>
    <string name="vfo_b">VFO B</string>
    <string name="vfo_hint_freq_mhz">Frequency MHz</string>
    <string name="vfo_rx_tone">Receive Tone</string>
    <string name="vfo_tx_tone">Transmit Tone</string>
    <string name="vfo_sq_mode">Squelch Mode</string>
    <string name="vfo_power">Power</string>
    <string name="vfo_bandwidth">Bandwidth</string>
    <string name="vfo_step">Step Frequency</string>
    <string name="vfo_signal">Signaling Code</string>
    <string name="vfo_offset_dir">Offset Direction</string>
    <string name="vfo_hint_offset_mhz">Offset Frequency MHz</string>
    <string name="vfo_fhss">FHSS</string>
    <string name="vfo_scan_range">VFO Scan Range</string>
    <string name="vfo_scan_low">Lower Limit</string>
    <string name="vfo_scan_high">Upper Limit</string>
    <string name="vfo_busy_lock">Busy Lock</string>
    <string name="vfo_pttid">PTT-ID</string>
    <string name="err_vfo_scan_integer">VFO scan range must use integer frequencies</string>
    <string name="err_vfo_scan_low_gt_high">VFO scan range lower limit cannot be greater than upper limit</string>
    <string name="err_vfo_scan_bands">VFO scan range is only allowed in 136-174 or 400-520</string>
    <string name="err_vfo_scan_same_band">VFO scan range upper and lower limits must be in the same band</string>
    <string name="dtmf_empty">No DTMF data available. Please read the device first.</string>
    <string name="dtmf_members">DTMF Members</string>
    <string name="dtmf_local_and_params">Local ID and Parameters</string>
    <string name="dtmf_local_id">Local ID</string>
    <string name="dtmf_duration">DTMF Tone Duration</string>
    <string name="dtmf_gap">DTMF Tone Interval</string>
    <string name="dtmf_hangup">Hang Time</string>
    <string name="dtmf_separator">Separator</string>
    <string name="dtmf_group_call">Group Call Code</string>
    <string name="dtmf_online">Online Code</string>
    <string name="dtmf_offline">Offline Code</string>
    <string name="dtmf_col_index">Index</string>
    <string name="dtmf_col_code">Code</string>
    <string name="dtmf_col_name">Name</string>
    <string name="rs_label_sql">Squelch Level</string>
    <string name="rs_label_save_mode">Power Save Mode</string>
    <string name="rs_label_vox">VOX Level</string>
    <string name="rs_label_backlight">Backlight Duration</string>
    <string name="rs_label_dual_standby">Dual Watch</string>
    <string name="rs_label_tot">Transmit Timeout</string>
    <string name="rs_label_beep">Key Beep</string>
    <string name="rs_label_voice">Voice Prompt</string>
    <string name="rs_label_language">Language</string>
    <string name="rs_label_side_tone">Side Tone</string>
    <string name="rs_label_scan_mode">Scan Mode</string>
    <string name="rs_label_vfo_pttid">PTT-ID</string>
    <string name="rs_label_ptt_delay">PTT-ID Delay</string>
    <string name="rs_label_ch_a_display_type">A Display Mode</string>
    <string name="rs_label_ch_b_display_type">B Display Mode</string>
    <string name="rs_label_vfo_busy_lock">Busy Lock</string>
    <string name="rs_label_auto_lock">Auto Lock</string>
    <string name="rs_label_alarm_mode">Alarm Mode</string>
    <string name="rs_label_alarm_tone">Local Alarm Tone</string>
    <string name="rs_label_tail_clear">Tail Tone Elimination</string>
    <string name="rs_label_rpt_tail_clear">Repeater Tail Elimination</string>
    <string name="rs_label_rpt_tail_det">Repeater Tail Delay</string>
    <string name="rs_label_roger">Roger Beep</string>
    <string name="rs_label_fm_enable">FM Radio</string>
    <string name="rs_label_ch_a_workmode">A Work Mode</string>
    <string name="rs_label_ch_b_workmode">B Work Mode</string>
    <string name="rs_label_key_lock">Keypad Lock</string>
    <string name="rs_label_power_on_display_type">Power-on Display Mode</string>
    <string name="rs_label_tone">Repeater Tone</string>
    <string name="rs_label_vox_delay_time">VOX Delay Time</string>
    <string name="rs_label_menu_quit_time">Menu Auto Exit</string>
    <string name="rs_label_tot_alarm">Transmit Timeout Warning</string>
    <string name="rs_label_cts_dcs_scan_type">Tone Scan Mode</string>
    <string name="rs_label_vfo_scan_range_l">VFO Scan Lower Limit</string>
    <string name="rs_label_vfo_scan_range_h">VFO Scan Upper Limit</string>
    <string name="rs_label_key1_short">Side Key Short Press Function</string>
    <string name="rs_label_rst_menu">Reset Menu Enable</string>
    <string name="rs_label_dtmf_hangup">Hang Time</string>
    <string name="rs_label_vox_sw">VOX Switch</string>
    <string name="rs_side_tone_key">Key Tone</string>
    <string name="rs_side_tone_id">ID Tone</string>
    <string name="rs_side_tone_key_id">Key + ID Tone</string>
    <string name="rs_display_name">Channel Name</string>
    <string name="rs_display_freq">Channel Frequency</string>
    <string name="rs_display_channel_no">Channel Number</string>
    <string name="rs_backlight_always">Always On</string>
    <string name="rs_language_english">English</string>
    <string name="rs_language_chinese">Chinese</string>
    <string name="rs_scan_mode_time">Time Scan</string>
    <string name="rs_scan_mode_carrier">Carrier Scan</string>
    <string name="rs_scan_mode_search">Search Scan</string>
    <string name="rs_alarm_mode_site">Local Alarm</string>
    <string name="rs_alarm_mode_tone">Transmit Alarm Tone</string>
    <string name="rs_alarm_mode_code">Transmit Alarm Code</string>
    <string name="rs_workmode_channel">Channel Mode</string>
    <string name="rs_workmode_vfo">Frequency Mode</string>
    <string name="rs_power_on_logo">LOGO</string>
    <string name="rs_power_on_voltage">Battery Voltage</string>
    <string name="rs_cts_scan_all">All</string>
    <string name="rs_cts_scan_rx">Receive</string>
    <string name="rs_cts_scan_tx">Transmit</string>
    <string name="rs_key1_reserved_0">Reserved 0</string>
    <string name="rs_key1_reserved_1">Reserved 1</string>
    <string name="rs_key1_reserved_2">Reserved 2</string>
    <string name="rs_key1_reserved_3">Reserved 3</string>
    <string name="rs_key1_scan">Scan</string>
    <string name="rs_key1_sweep">Frequency Sweep</string>
    <string name="rs_key1_vox">VOX</string>
    <string name="rs_key1_fm">FM Radio</string>
    <string name="rs_key1_flashlight">Flashlight</string>
    <string name="rs_key1_alarm">Alarm</string>
    <string name="tone_manual_ctcss">Manual Input CTCSS...</string>
    <string name="ctcss_input_title">Enter CTCSS</string>
</resources>